# vector-vault

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: entry.sh
vector_vault/: asgi.py  settings.py  urls.py  wsgi.py
vector_vault/api/: apps.py  models.py  serializers.py  urls.py  views.py
vector_vault/api/migrations/: 0001_pgvector.py  0002_initial.py
